--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,12 +39,14 @@
     "@types/jest": "^29.5.14",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/redux-mock-store": "^1.5.0",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "jest": "^29.7.0",
+    "redux-mock-store": "^1.5.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.7.3",
     "typescript-eslint": "^8.25.0",
