--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3'
 services:
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
     ports:
       - "3000:3000"
 # Other services...
