Remove hardcoded credentials and use environment variables

--- a/Free-Mentors-Backend/docker-compose.yml
+++ b/Free-Mentors-Backend/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     ports:
       - "27017:27017"
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-hopebiziyaremye@gmail.com}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-10A20Bizy@rca}
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
     volumes:
       - mongodb_data:/data/db
 
