--- a/Free-Mentors-Backend/requirements.txt
+++ b/Free-Mentors-Backend/requirements.txt
@@ -5,6 +5,7 @@ django-environ==0.12.0
 django-filter==23.5
 django-graphql-auth==0.3.7
 django-graphql-jwt==0.4.0
+django-graphql-auth
 dnspython==2.7.0
 graphene==3.4.3
 graphene-django==3.2.2
