--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^6.4.6",
     "@mui/x-date-pickers": "^7.27.1",
     "@reduxjs/toolkit": "^2.6.0",
+    "@tanstack/react-query": "^5.67.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "graphql": "^16.10.0",
