--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/x-date-pickers": "^7.27.1",
     "@reduxjs/toolkit": "^2.6.0",
     "@tanstack/react-query": "^5.67.1",
+    "@testing-library/user-event": "^14.6.1",
     "cross-env": "^7.0.3",
     "date-fns": "^2.30.0",
     "graphql": "^16.10.0",
